# cpp-gtest-allure-utilities

./: .appveyor.yml  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  conanfile.py  vs2022.conanprofile
.github/workflows/: archive-docs.yml
ci/: SnowRelease.properties  build_docs.sh  deploy.sh
ci/pipelines/: Build.jenkinsfile  NewtonDebug.properties  NewtonRelease.properties  Release.jenkinsfile  SnowDebug.properties  SnowRelease.properties
src/GTestAllureUtilities/: AllureAPI.cpp  AllureAPI.h  CMakeLists.txt
src/GTestAllureUtilities/Model/: Action.cpp  Action.h  Attachment.cpp  Attachment.h  ExpectedResult.cpp  ExpectedResult.h  Format.h  Label.cpp  Label.h  Link.cpp  Link.h  Parameter.cpp  Parameter.h  Stage.h  Status.h  Step.cpp  Step.h  StepType.h  TestCase.cpp  TestCase.h  TestProgram.cpp  TestProgram.h  TestProperty.h  TestSuite.cpp  TestSuite.h
src/GTestAllureUtilities/Services/: FileService.cpp  FileService.h  GTestEventListener.cpp  GTestEventListener.h  IServicesFactory.h  ITestCaseJSONSerializer.h  IUUIDGeneratorService.h  ServicesFactory.cpp  ServicesFactory.h  TestCaseJSONSerializer.cpp  TestCaseJSONSerializer.h  TestCaseStartEventHandler.cpp  TestCaseStartEventHandler.h  TestSuiteJSONBuilder.cpp  TestSuiteJSONBuilder.h  UUIDGeneratorService.cpp
src/GTestAllureUtilities/Services/EventHandlers/: ITestCaseEndEventHandler.h  ITestCaseStartEventHandler.h  ITestProgramEndEventHandler.h  ITestProgramStartEventHandler.h  ITestStepEndEventHandler.h  ITestStepStartEventHandler.h  ITestSuiteEndEventHandler.h  ITestSuiteStartEventHandler.h  TestCaseEndEventHandler.cpp  TestCaseEndEventHandler.h  TestCaseStartEventHandler.cpp  TestCaseStartEventHandler.h  TestProgramEndEventHandler.cpp  TestProgramEndEventHandler.h  TestProgramStartEventHandler.cpp  TestProgramStartEventHandler.h  TestStepEndEventHandler.cpp  TestStepEndEventHandler.h  TestStepStartEventHandler.cpp  TestStepStartEventHandler.h  TestSuiteEndEventHandler.cpp  TestSuiteEndEventHandler.h  TestSuiteStartEventHandler.cpp  TestSuiteStartEventHandler.h
src/GTestAllureUtilities/Services/GoogleTest/: GTestEventListener.cpp  GTestEventListener.h  GTestStatusChecker.cpp  GTestStatusChecker.h  IGTestStatusChecker.h
src/GTestAllureUtilities/Services/Property/: ITestCasePropertySetter.h  ITestSuitePropertySetter.h  TestCasePropertySetter.cpp  TestCasePropertySetter.h  TestSuitePropertySetter.cpp  TestSuitePropertySetter.h
src/GTestAllureUtilities/Services/Report/: ITestCaseJSONSerializer.h  ITestProgramJSONBuilder.h  ITestSuiteJSONBuilder.h  ITestSuiteJSONSerializer.h  TestCaseJSONSerializer.cpp  TestCaseJSONSerializer.h  TestProgramJSONBuilder.cpp  TestProgramJSONBuilder.h  TestSuiteJSONBuilder.cpp  TestSuiteJSONBuilder.h  TestSuiteJSONSerializer.cpp  TestSuiteJSONSerializer.h
src/GTestAllureUtilities/Services/System/: FileService.cpp  FileService.h  IFileService.h  ITimeService.h  IUUIDGeneratorService.h  TimeService.cpp  TimeService.h  UUIDGeneratorService.cpp  UUIDGeneratorService.h
test/IntegrationTest/: CMakeLists.txt  main.cpp
test/IntegrationTest/Tests/: BaseIntegrationTest.cpp  BaseIntegrationTest.h  BasicTestCaseIntegrationTest.cpp
test/SampleTestProject/: CMakeLists.txt  main.cpp
test/SampleTestProject/Tests/: ComplexTestSuite.cpp  ParametricTestSuite.cpp  SimpleTestSuite.cpp
test/TestUtilities/: CMakeLists.txt  EntityComparator.h  EntityComparatorConfiguration.cpp  EntityComparatorConfiguration.h  JSONComparator.cpp  JSONUtilities.cpp  JSONUtilities.h
test/TestUtilities/Mocks/Services/: MockServicesFactory.cpp  MockServicesFactory.h
test/TestUtilities/Mocks/Services/EventHandlers/: MockTestCaseEndEventHandler.cpp  MockTestCaseEndEventHandler.h  MockTestCaseStartEventHandler.cpp  MockTestCaseStartEventHandler.h  MockTestProgramEndEventHandler.cpp  MockTestProgramEndEventHandler.h  MockTestProgramStartEventHandler.cpp  MockTestProgramStartEventHandler.h  MockTestSuiteEndEventHandler.cpp  MockTestSuiteEndEventHandler.h  MockTestSuiteStartEventHandler.cpp  MockTestSuiteStartEventHandler.h
test/TestUtilities/Mocks/Services/Report/: MockTestCaseJSONSerializer.cpp  MockTestCaseJSONSerializer.h  MockTestProgramJSONBuilder.cpp  MockTestProgramJSONBuilder.h  MockTestSuiteJSONBuilder.cpp  MockTestSuiteJSONBuilder.h  MockTestSuiteJSONSerializer.cpp  MockTestSuiteJSONSerializer.h
test/TestUtilities/Mocks/Services/System/: MockFileService.cpp  MockFileService.h  MockTimeService.cpp  MockTimeService.h  MockUUIDGeneratorService.cpp  MockUUIDGeneratorService.h
test/TestUtilities/Stubs/Services/: StubEventListener.cpp  StubEventListener.h  StubServicesFactory.cpp  StubServicesFactory.h
test/TestUtilities/Stubs/Services/System/: StubFileService.cpp  StubFileService.h
test/UnitTest/: CMakeLists.txt  main.cpp  stdafx.h
test/UnitTest/Tests/Services/: TestCaseJSONSerializerTest.cpp
test/UnitTest/Tests/Services/EventHandlers/: TestCaseEndEventHandlerTest.cpp  TestCaseStartEventHandlerTest.cpp  TestProgramEndEventHandlerTest.cpp  TestProgramStartEventHandlerTest.cpp  TestStepEndEventHandlerTest.cpp  TestStepStartEventHandlerTest.cpp  TestSuiteEndEventHandlerTest.cpp  TestSuiteStartEventHandlerTest.cpp
test/UnitTest/Tests/Services/GoogleTest/: GTestEventListenerTest.cpp
test/UnitTest/Tests/Services/Property/: TestCasePropertySetterTest.cpp  TestSuitePropertySetterTest.cpp
test/UnitTest/Tests/Services/Report/: TestCaseJSONSerializerTest.cpp  TestProgramJSONBuilderTest.cpp  TestSuiteJSONBuilderTest.cpp  TestSuiteJSONSerializerTest.cpp
test/UnitTest/Tests/Services/System/: FileServiceTest.cpp  TimeServiceTest.cpp  UUIDGeneratorServiceTest.cpp
test_package/: CMakeLists.txt  GTestAllureUtilitiesExample.cpp  conanfile.py
